# magic-game

./: Cargo.toml  README.md
src/: fps.rs  lib.rs  main.rs  version.rs
src/client/: mod.rs
src/client_plugin/: mod.rs
src/magic/: components.rs  mod.rs  spells.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs
src/voxel/: components.rs  mesh_data.rs  mod.rs
